# derp-client-verifier

./: Cargo.toml  README.md  dist-workspace.toml  dist.Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml  release.yml
data/: client_list.txt
src/: main.rs
