[package]
name = "derp-client-verifier"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wzv5/derp-client-verifier"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
